<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/textSex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sex"
            android:textSize="40sp" />

        <RadioGroup
            android:id="@+id/radGsex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/btnFemale"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/female" />

            <RadioButton
                android:id="@+id/btnMale"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/male" />
        </RadioGroup>

        <Spinner
            android:id="@+id/spnMale"

            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:entries="@array/male_age"
            android:spinnerMode="dropdown" />

        <Spinner
            android:id="@+id/spnFemale"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:entries="@array/female_age"
            android:spinnerMode="dropdown" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/chkMusic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/music" />

                <CheckBox
                    android:id="@+id/chkSing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sing" />

                <CheckBox
                    android:id="@+id/chkDance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dance" />

                <CheckBox
                    android:id="@+id/chkTravel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/travel" />

                <CheckBox
                    android:id="@+id/chkReading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reading" />

                <CheckBox
                    android:id="@+id/chkWriting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/writing" />

                <CheckBox
                    android:id="@+id/chkClimbing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/climbing" />

                <CheckBox
                    android:id="@+id/chkSwim"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/swim" />

                <CheckBox
                    android:id="@+id/chkEating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/eating" />

                <CheckBox
                    android:id="@+id/chkDrawing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/drawing" />
            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/btnOK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnOK"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtSelect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select"
            android:textSize="18sp"/>

    </LinearLayout>

</ScrollView>

